@@ -1,6 +1,7 @@
 package org.olafneumann.filesystem.parameters;
 
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 
@@ -19,24 +20,24 @@ public enum PathKind implements Function<Path, PathKind.PathScenario> {
 	FILE_SYMLINK(path -> {
 		final Path filePath = FILE.apply(path).getSubjectPath();
 		final Path linkPath = FilesystemUtils.createLink(filePath, "symlink", path);
-		return PathScenario.of(linkPath, filePath, List.of(linkPath, filePath));
+		return PathScenario.of(linkPath, filePath, Arrays.asList(linkPath, filePath));
 	}),
 	DIRECTORY_SYMLINK(path -> {
 		final Path directoryPath = DIRECTORY.apply(path).getSubjectPath();
 		final Path linkPath = FilesystemUtils.createLink(directoryPath, "symlink", path);
-		return PathScenario.of(linkPath, directoryPath, List.of(linkPath, directoryPath));
+		return PathScenario.of(linkPath, directoryPath, Arrays.asList(linkPath, directoryPath));
 	}),
 	RECURSIVE_DIRECTORY(path -> {
 		final Path first = FilesystemUtils.createDirectory(path, "first");
 		final Path second = FilesystemUtils.createDirectory(first, "second");
 		final Path third = FilesystemUtils.createDirectory(second, "third");
-		return PathScenario.of(third, List.of(first, second, third));
+		return PathScenario.of(third, Arrays.asList(first, second, third));
 	}),
 	RECURSIVE_FILE(path -> {
 		final Path first = FilesystemUtils.createDirectory(path, "first");
 		final Path second = FilesystemUtils.createDirectory(first, "second");
 		final Path third = FilesystemUtils.createFile(second, "recursive.txt");
-		return PathScenario.of(third, List.of(first, second, third));
+		return PathScenario.of(third, Arrays.asList(first, second, third));
 	});
 
 	private PathKind(final Function<Path, PathScenario> allPathsSupplier) {
@@ -52,7 +53,7 @@ public enum PathKind implements Function<Path, PathKind.PathScenario> {
 
 	public static class PathScenario {
 		static PathScenario of(final Path tested) {
-			return of(tested, List.of(tested));
+			return of(tested, Arrays.asList(tested));
 		}
 
 		static PathScenario of(final Path tested, final List<Path> all) {
